--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -23,8 +23,8 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'shop:sortLowtoHigh' %}">Lower to higher price</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Higher to lower price</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'shop:sortHighToLow' %}">Higher to lower price</a>
                 </li>
                 
             </ul>
@@ -48,7 +48,7 @@
                     <div class="mb-2">
                         <h6 class="font-weight-semibold mb-2"> <a href="{{p.product_url}}" class="text-default mb-2" data-abc="true">{{p.name}}</a> </h6> <a href="#" class="text-muted" data-abc="true"></a>
                     </div>
-                    <h3 class="mb-0 font-weight-semibold">{{p.price}}</h3>
+                    <h3 class="mb-0 font-weight-semibold">{{p.price}} BDT</h3>
                     <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
                     <div class="text-muted mb-3">34 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                 </div>
